--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "email-url2png",
+  "name": "url2png-email",
   "version": "0.0.1",
-  "description": "send a screenshot to your email",
+  "description": "send a screenshot of a live site to your email",
   "main": "index.js",
   "dependencies": {
     "url2png": "^6.0.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Corey Zev Holland",
   "license": "MIT"
